// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FoodActionsMenu renders editing action buttons 1`] = `
<div
  className="actions-container"
>
  <button
    className="food-action"
    onClick={[Function]}
    type="button"
  >
    Done
  </button>
</div>
`;

exports[`FoodActionsMenu renders food action buttons 1`] = `
<div
  className="actions-container"
>
  <button
    className="food-action"
    onClick={[Function]}
    type="button"
  >
    Add
  </button>
  <button
    className="food-action"
    onClick={[Function]}
    type="button"
  >
    Edit
  </button>
</div>
`;
